--- a/css/style2.css
+++ b/css/style2.css
@@ -1,236 +1,278 @@
-*,
-*::before,
-*::after {
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
+
+:root {
+  --success-color: #00ff6a;
+  --error-color: #ff1c02;
+}
+/* #00ff6a; */
+/* font-family: "Open Sans", sans-serif; */
+* {
   box-sizing: border-box;
-  -webkit-box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  color: #dbcccc;
-  background-color: #f2f2f0;
-  background-color: #7a1313;
-  background-image: url("../images/cover.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  padding: 20px;
-  overflow-x: hidden;
-}
-
-body,
-input,
-button {
-  font-family: 'Muli', sans-serif, -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
-  outline: none;
-}
-
-.main-container {
-  max-width: 900px;
-  margin: 0 auto;
-}
-
-a {
-  color: inherit;
-  outline: none;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.form-container {
-  max-width: 450px;
-  margin: 0 auto;
-}
-
-.form-body {
-  background-color: #a30000;
-  overflow: hidden;
-  padding: 50px;
-  color: #ffffff;
-  border-radius: 3px;
-  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-}
-
-@media only screen and (max-width: 500px) {
-  .form-body {
-    padding: 50px 40px;
-  }
-}
-
-@media only screen and (max-width: 455px) {
-  .form-body {
-    padding: 45px 30px;
-  }
-}
-
-@media only screen and (max-width: 340px) {
-  .form-body {
-    padding: 30px 20px;
-  }
-}
-
-.form-body .title {
-  margin: 0;
-  text-align: center;
-  font-weight: normal;
-}
-
-.social-login ul {
-  list-style-type: none;
-  margin: 30px 0;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.social-login ul li {
-  flex: 1 auto;
-}
-
-.social-login ul li a {
-  background-color: #56385a;
-  border-radius: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+html {
   width: 100%;
   height: 100%;
-  padding: 15px;
-  color: #e6e6e6;
-  font-weight: bold;
-  text-decoration: none;
-  transition: background-color .3s;
+  background: linear-gradient(
+    45deg,
+    #160092,
+    #9803d3,
+    #e945c6,
+    #ff5e52,
+    #ffe552
+  );
+  background-size: 600% 100%;
+  animation: gradient 7s linear infinite;
+  animation-direction: alternate;
 }
-
-.social-login ul li a::before {
-  content: '';
-  width: 30px;
-  height: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 30px;
-  margin-right: 5px;
-}
-
-.social-login ul li a:hover {
-  background-color: #fff199;
-  color: #0e090e;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-}
-
-li.google {
-  margin-right: 10px;
-}
-
-li.google a::before {
-  background-image: url("../images/google.png");
-}
-
-li.fb {
-  margin-left: 10px;
-}
-
-li.fb a::before {
-  margin: 0;
-  background-image: url("../images/fb.png");
-}
-
-@media only screen and (max-width: 400px) {
-  .social-login ul {
-    flex-direction: column;
-  }
-
-  li.google,
-  li.fb {
-    margin: 0;
-  }
-
-  li.google {
-    margin-bottom: 10px;
-  }
-}
-
-._or {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #d9d9d9;
-}
-
-.the-form {
+body {
+  font-family: "Open Sans", sans-serif;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
 }
 
-.the-form label {
-  margin-bottom: 5px;
-  color: #e6e6e6;
-  font-weight: bold;
+/* #f17c58,
+    #e94584,
+    #24aadb,
+    #27dbb1,
+    #ffdc18,
+    #ff5e52 */
+
+.container {
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 }
 
-.the-form [type="email"],
-.the-form [type="password"] {
-  padding: 15px;
-  font-size: 16px;
-  background: rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 3px;
-  margin-bottom: 15px;
-  transition: background .3s;
-  color: #e6e6e6;
-}
-
-.the-form [type="email"]::placeholder,
-.the-form [type="password"]::placeholder {
-  color: rgba(255, 255, 255, 0.3);
-}
-
-.the-form [type="email"]:hover,
-.the-form [type="password"]:hover {
-  background: rgba(0, 0, 0, 0.1);
-}
-
-.the-form [type="email"]:focus,
-.the-form [type="password"]:focus {
-  background: #ffffff;
-  box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
-  border-color: #d7d0d8;
-  color: #222222;
-}
-
-.the-form [type="email"]:focus::placeholder,
-.the-form [type="password"]:focus::placeholder {
-  color: #666666;
-}
-
-.the-form [type="submit"] {
-  background: #eeeae8;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 18px;
-  font-size: 20px;
-  border-radius: 3px;
-  cursor: pointer;
-  margin-top: 20px;
-  color: black;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-}
-
-.the-form [type="submit"]:hover {
-  opacity: .9;
-}
-
-.form-footer div {
+#form {
+  background: rgba(255, 255, 255, 0.15);
+  padding: 3em;
+  width: 450px;
+  border-radius: 20px;
+  border-left: 1px solid rgba(255, 255, 255, 0.4);
+  border-top: 1px solid rgba(255, 255, 255, 0.4);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  box-shadow: 20px 20px 40px -6px rgba(0, 0, 0, 0.2);
   text-align: center;
-  padding: 25px 20px;
-  font-size: 18px;
-  color: #e6e6e6;
+  position: relative;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
-.form-footer div a {
-  color: #c0ab9b;
+::placeholder {
+  font-weight: 100;
+  font-size: 19px;
+  opacity: 0.7;
+  font-variant: small-caps;
+  color: rgba(255, 255, 255);
+
+  /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); */
+}
+
+.form {
+  padding: 30px 40px;
+}
+
+.form-control {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.form-control input {
+  font-size: 21px;
+  letter-spacing: 1.5px;
+  background: transparent;
+  width: 100%;
+  padding: 1em;
+  margin-bottom: 0.25em;
+  margin-top: 0.25em;
+  border: none;
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50px;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  font-weight: 500;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.form-control input:focus {
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 4px 4px 60px 8px rgba(0, 0, 0, 0.2);
+}
+
+.form-control.success input {
+  border-color: var(--success-color);
+  border: 5px solid var(--success-color);
+}
+
+.form-control input:hover {
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 4px 6px 60px 8px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.form-control.error input {
+  border-color: var(--error-color);
+  border: 5px solid var(--error-color);
+  font-size: 20px;
+}
+
+.form-control small {
+  color: white;
+  letter-spacing: 1.5px;
+
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+}
+
+.form-control.error small {
+  visibility: visible;
+  font-size: 13px;
+  width: 100%;
+}
+
+.form button {
+  cursor: pointer;
+  font-size: 18px;
+  letter-spacing: 2px;
+  background: transparent;
+  margin-top: 0.25em;
+  width: 100%;
+  height: 65px;
+  padding: 1em;
+  margin-bottom: 0.25em;
+  border: none;
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50px;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  outline: none;
+}
+
+.form button:hover {
+  background-color: #000000;
+  border: 1px solid #000000;
+  color: white;
+  cursor: pointer;
+}
+
+.form button:active {
+  background-color: #000000;
+  box-shadow: 0 12px 12px 0 rgba(112, 112, 112, 0.37);
+  transform: translateY(5px);
+}
+
+h2 {
+  text-align: center;
+  font-weight: 600;
+  color: #fff;
+  opacity: 0.8;
+  font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 30px;
+  letter-spacing: 1.5px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 100%;
+  }
+}
+
+.drop {
+  background: rgba(255, 255, 255, 0.06);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  border-radius: 10px;
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 10px 10px 60px -8px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  animation: animate 10s linear infinite;
+  animation-delay: calc(-2s * var(--i));
+}
+
+@keyframes animate {
+  0%,
+  100% {
+    transform: translateY(-40px);
+  }
+  50% {
+    transform: translateY(40px);
+  }
+}
+
+.drop-1 {
+  height: 200px;
+  width: 200px;
+  top: -100px;
+  left: -120px;
+  z-index: -1;
+  border-radius: 500px;
+}
+.drop-2 {
+  height: 110px;
+  width: 110px;
+  bottom: -90px;
+  right: -50px;
+  border-radius: 500px;
+}
+.drop-3 {
+  height: 70px;
+  width: 350px;
+  bottom: 170px;
+  right: -200px;
+  z-index: -1;
+  transform: rotate(-45deg);
+}
+.drop-4 {
+  height: 120px;
+  width: 120px;
+  top: -60px;
+  right: -60px;
+}
+.drop-5 {
+  height: 70px;
+  width: 70px;
+  top: 200px;
+  bottom: 170px;
+  left: -210px;
+  z-index: -1;
+}
+
+a,
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
 }
