--- a/css/style2.css
+++ b/css/style2.css
@@ -1,53 +1,38 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-
-:root {
-  --success-color: #2ecc71;
-  --error-color: #e74c3c;
-}
-
-* {
+*{
   box-sizing: border-box;
 }
-
-body {
+body{
   background-color: #f9fafb;
-  font-family: 'Open Sans', sans-serif;
-  display: flex;
-  align-items: center;
+  display:flex;
+  align-items:center;
   justify-content: center;
   min-height: 100vh;
-  margin: 0;
+  margin : 0px;
 }
-
-.container {
+.container{
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, .3);
   width: 400px;
 }
-
-h2 {
+h2{
   text-align: center;
-  margin: 0 0 20px;
+  margin:0 0 20px ;
 }
-
-.form {
+.form{
   padding: 30px 40px;
 }
-
-.form-control {
+.form-control{
   margin-bottom: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   position: relative;
 }
-
-.form-control label {
+.form-control label{
   color: #777;
   display: block;
   margin-bottom: 5px;
 }
-
-.form-control input {
+.form-control input{
   border: 2px solid #f0f0f0;
   border-radius: 4px;
   display: block;
@@ -55,41 +40,32 @@ h2 {
   padding: 10px;
   font-size: 14px;
 }
-
-.form-control input:focus {
-  outline: 0;
-  border-color: #777;
+.form-control.success input{
+  border-color:green;
 }
-
-.form-control.success input {
-  border-color: var(--success-color);
+.form-control.error input{
+  border-color: red;
 }
-
-.form-control.error input {
-  border-color: var(--error-color);
-}
-
-.form-control small {
-  color: var(--error-color);
+.form-control small{
+  color: red;
   position: absolute;
-  bottom: 0;
+  bottom: 1;
   left: 0;
   visibility: hidden;
 }
-
-.form-control.error small {
+.form-control.error small{
   visibility: visible;
 }
-
-.form button {
+.form-button{
   cursor: pointer;
   background-color: #3498db;
   border: 2px solid #3498db;
-  border-radius: 4px;
   color: #fff;
+  border-radius: 4px;
   display: block;
-  font-size: 16px;
+  width: 100%;
   padding: 10px;
   margin-top: 20px;
-  width: 100%;
+  font-size: 18px;
+
 }
